# ByteguardXv4

./: .dockerignore  .env.backend.example  .env.example  .gitignore  .tauri-ignore  AUTH_IMPLEMENTATION.md  BYTEGUARDX_COMPLETE_COMPREHENSIVE_OVERVIEW.md  BYTEGUARDX_UI_UX_ENHANCEMENT_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.security  ENHANCED_UI_UX_IMPLEMENTATION.md  FOLDER_UPLOAD_GUIDE.md  FRONTEND_INTEGRATION_COMPLETE.md  GROWTH_READINESS_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PLUGIN_ECOSYSTEM_SUMMARY.md  PRIORITY_1_IMPLEMENTATION.md  PRIORITY_2_IMPLEMENTATION.md  PRIORITY_3_IMPLEMENTATION.md  PURE_BLACK_THEME_APPLIED.md  README.md  RUN_LOCAL_README.md  SECURITY.md  SECURITY_CHECKLIST.md  SECURITY_ENHANCEMENTS.md  SECURITY_HARDENING.md  SETUP_LOCAL_ENV.md  SINGLE_LINK_ACCESS.md  START_HERE.md  analyze_and_fix_all_issues.py  byteguardx.db-shm  byteguardx.db-wal  byteguardx_api_server.py  byteguardx_auth_api_server.py  byteguardx_dev.db-shm  byteguardx_dev.db-wal  (+100 more)
browser-extension/: content.js  manifest.json
byteguardx/: __init__.py  pre_commit.py
byteguardx-portal/: .eslintrc.security.cjs  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  package.security.json  security-validation-report.json  security.config.js  tailwind.config.js  vercel.json  vite.config.security.ts  vite.config.ts
cleanup/: auth-cleanup.md  inventory.md  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  menu.rs  python_bridge.rs  sandbox.rs  storage.rs
(+422 files in other folders)
